<resources>
    <string name="app_name">Helpywork</string>
    <string name="start_display">HELPYWORK\nLA CLÉ DU SUCCES</string>
    <string name="welcome_display">BIENVENUE SUR HELPYWORK</string>
    <string name="name">NAME</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="confirm">Confirmation MDP</string>
    <string name="noAccount">Pas encore de compte ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string-array name="matiere_array">
        <item>Mathématiques</item>
        <item>Français</item>
        <item>Anglais</item>
        <item>Histoire</item>
        <item>Géographie</item>
        <item>SVT</item>
        <item>Physique</item>
        <item>Art</item>
        <item>Chimie</item>
        <item>Philosophie</item>
    </string-array>

    <string-array name="niveau_array">
        <item>6eme</item>
        <item>5eme</item>
        <item>4eme</item>
        <item>3eme</item>
        <item>2nd</item>
        <item>1ere</item>
        <item>Terminal</item>
    </string-array>

</resources>
