<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_display"
                android:textAlignment="center"
                android:textColor="#2CAA7B"
                android:textSize="30dp"
                android:fontFamily="casual"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LOGIN"
                    android:textSize="25dp"
                    android:textColor="#666666"
                    android:fontFamily="casual"/>
                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:backgroundTint="#000"
                    android:hint="@string/login"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MOT DE PASSE"
                    android:textSize="25dp"
                    android:textColor="#666666"
                    android:fontFamily="casual"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="#000"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connexion"
                android:onClick="onClick"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noAccount"
                    android:fontFamily="casual"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:fontFamily="casual"
                    android:textSize="15dp"
                    android:textColor="#2CAA7B"
                    android:text="S'inscrire"
                    android:onClick="createAccount"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>